// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mascot Component > State: error > matches snapshot for error state 1`] = `
<DocumentFragment>
  <div
    class="relative flex items-center justify-center"
    data-testid="mascot-root"
    style="width: 40px; height: 40px;"
  >
    <div
      class="absolute rounded-full blur-xl bg-destructive/20"
      data-testid="mascot-glow"
      style="width: 48px; height: 48px;"
    />
    <svg
      class="relative z-10 h-full w-full overflow-visible"
      viewBox="0 0 100 100"
    >
      <g
        data-testid="mascot-orbits"
      >
        <circle
          class="stroke-destructive/40"
          cx="50"
          cy="50"
          fill="none"
          r="40"
          stroke-width="1"
          style="transform-origin: 50px 50px;"
        />
        <circle
          class="stroke-destructive/40"
          cx="50"
          cy="50"
          fill="none"
          r="45"
          stroke-dasharray="4 4"
          stroke-width="0.5"
          style="transform-origin: 50px 50px;"
        />
      </g>
      <g
        data-testid="mascot-body"
      >
        <circle
          class="fill-destructive"
          cx="50"
          cy="50"
          data-testid="mascot-core"
          r="30"
        />
        <g
          class="text-destructive-foreground"
          data-testid="mascot-features"
          fill="currentColor"
        >
          <path
            d="M 35 40 L 45 50 M 45 40 L 35 50"
            stroke="currentColor"
            stroke-width="3"
          />
          <path
            d="M 55 40 L 65 50 M 65 40 L 55 50"
            stroke="currentColor"
            stroke-width="3"
          />
        </g>
        <g
          class="text-destructive-foreground"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2.5"
        >
          <path
            d="M 43 65 Q 50 58 57 65"
          />
        </g>
      </g>
      <g
        data-testid="mascot-orbiting-node-1"
        style="transform-origin: 50px 50px;"
      >
        <circle
          class="fill-destructive"
          cx="50"
          cy="10"
          r="4"
        />
      </g>
      <g
        data-testid="mascot-orbiting-node-2"
        style="transform-origin: 50px 50px;"
      >
        <circle
          class="fill-destructive"
          cx="50"
          cy="5"
          r="3"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Mascot Component > State: idle > matches snapshot for idle state 1`] = `
<DocumentFragment>
  <div
    class="relative flex items-center justify-center"
    data-testid="mascot-root"
    style="width: 40px; height: 40px;"
  >
    <div
      class="absolute rounded-full blur-xl bg-primary/20"
      data-testid="mascot-glow"
      style="width: 48px; height: 48px;"
    />
    <svg
      class="relative z-10 h-full w-full overflow-visible"
      viewBox="0 0 100 100"
    >
      <g
        data-testid="mascot-orbits"
      >
        <circle
          class="stroke-primary/30"
          cx="50"
          cy="50"
          fill="none"
          r="40"
          stroke-width="1"
          style="transform-origin: 50px 50px;"
        />
        <circle
          class="stroke-primary/30"
          cx="50"
          cy="50"
          fill="none"
          r="45"
          stroke-dasharray="4 4"
          stroke-width="0.5"
          style="transform-origin: 50px 50px;"
        />
      </g>
      <g
        data-testid="mascot-body"
      >
        <circle
          class="fill-primary"
          cx="50"
          cy="50"
          data-testid="mascot-core"
          r="30"
        />
        <g
          class="text-primary-foreground"
          data-testid="mascot-features"
          fill="currentColor"
        >
          <circle
            cx="40"
            cy="45"
            r="4"
          />
          <circle
            cx="60"
            cy="45"
            r="4"
          />
        </g>
        <g
          class="text-primary-foreground"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2.5"
        >
          <path
            d="M 45 60 Q 50 65 55 60"
          />
        </g>
      </g>
      <g
        data-testid="mascot-orbiting-node-1"
        style="transform-origin: 50px 50px;"
      >
        <circle
          class="fill-primary"
          cx="50"
          cy="10"
          r="4"
        />
      </g>
      <g
        data-testid="mascot-orbiting-node-2"
        style="transform-origin: 50px 50px;"
      >
        <circle
          class="fill-primary"
          cx="50"
          cy="5"
          r="3"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Mascot Component > State: refusal > matches snapshot for refusal state 1`] = `
<DocumentFragment>
  <div
    class="relative flex items-center justify-center"
    data-testid="mascot-root"
    style="width: 40px; height: 40px;"
  >
    <div
      class="absolute rounded-full blur-xl bg-amber-500/20"
      data-testid="mascot-glow"
      style="width: 48px; height: 48px;"
    />
    <svg
      class="relative z-10 h-full w-full overflow-visible"
      viewBox="0 0 100 100"
    >
      <g
        data-testid="mascot-orbits"
      >
        <circle
          class="stroke-amber-500/40"
          cx="50"
          cy="50"
          fill="none"
          r="40"
          stroke-width="1"
          style="transform-origin: 50px 50px;"
        />
        <circle
          class="stroke-amber-500/40"
          cx="50"
          cy="50"
          fill="none"
          r="45"
          stroke-dasharray="4 4"
          stroke-width="0.5"
          style="transform-origin: 50px 50px;"
        />
      </g>
      <g
        data-testid="mascot-body"
      >
        <circle
          class="fill-amber-500"
          cx="50"
          cy="50"
          data-testid="mascot-core"
          r="30"
        />
        <g
          class="text-amber-50"
          data-testid="mascot-features"
          fill="currentColor"
        >
          <rect
            height="2"
            width="8"
            x="36"
            y="44"
          />
          <rect
            height="2"
            width="8"
            x="56"
            y="44"
          />
        </g>
        <g
          class="text-amber-50"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2.5"
        >
          <path
            d="M 45 62 H 55"
          />
        </g>
      </g>
      <g
        data-testid="mascot-orbiting-node-1"
        style="transform-origin: 50px 50px;"
      >
        <circle
          class="fill-amber-500"
          cx="50"
          cy="10"
          r="4"
        />
      </g>
      <g
        data-testid="mascot-orbiting-node-2"
        style="transform-origin: 50px 50px;"
      >
        <circle
          class="fill-amber-500"
          cx="50"
          cy="5"
          r="3"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Mascot Component > State: thinking > matches snapshot for thinking state 1`] = `
<DocumentFragment>
  <div
    class="relative flex items-center justify-center"
    data-testid="mascot-root"
    style="width: 40px; height: 40px;"
  >
    <div
      class="absolute rounded-full blur-xl bg-primary/30"
      data-testid="mascot-glow"
      style="width: 48px; height: 48px;"
    />
    <svg
      class="relative z-10 h-full w-full overflow-visible"
      viewBox="0 0 100 100"
    >
      <g
        data-testid="mascot-orbits"
      >
        <circle
          class="stroke-primary/60"
          cx="50"
          cy="50"
          fill="none"
          r="40"
          stroke-width="1"
          style="transform-origin: 50px 50px;"
        />
        <circle
          class="stroke-primary/60"
          cx="50"
          cy="50"
          fill="none"
          r="45"
          stroke-dasharray="4 4"
          stroke-width="0.5"
          style="transform-origin: 50px 50px;"
        />
      </g>
      <g
        data-testid="mascot-body"
      >
        <circle
          class="fill-primary"
          cx="50"
          cy="50"
          data-testid="mascot-core"
          r="30"
        />
        <g
          class="text-primary-foreground"
          data-testid="mascot-features"
          fill="currentColor"
        >
          <circle
            cx="40"
            cy="45"
            r="4"
          />
          <circle
            cx="60"
            cy="45"
            r="4"
          />
          <path
            d="M 35 35 Q 40 30 45 35"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
          />
        </g>
        <g
          class="text-primary-foreground"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2.5"
        >
          <path
            d="M 45 62 H 55"
          />
        </g>
      </g>
      <g
        data-testid="mascot-orbiting-node-1"
        style="transform-origin: 50px 50px;"
      >
        <circle
          class="fill-primary"
          cx="50"
          cy="10"
          r="4"
        />
      </g>
      <g
        data-testid="mascot-orbiting-node-2"
        style="transform-origin: 50px 50px;"
      >
        <circle
          class="fill-primary"
          cx="50"
          cy="5"
          r="3"
        />
      </g>
    </svg>
  </div>
</DocumentFragment>
`;
